First pass at solarizing it

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atom-dark-ui",
+  "name": "atom-solarized-ui",
   "theme": "ui",
   "version": "0.23.0",
   "description": "Default dark theme for interface components",
