Make this it's own package

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "atom-solarized-ui",
+  "name": "atom-solarized-dark-ui",
   "theme": "ui",
-  "version": "0.23.0",
-  "description": "Default dark theme for interface components",
+  "version": "0.1.0",
+  "description": "Solarized dark theme for interface components",
   "license": "MIT",
-  "repository": "https://github.com/atom/atom-dark-ui",
+  "repository": "https://github.com/tclem/atom-solaried-dark-ui",
   "engines": {
     "atom": ">0.40.0"
   }
