--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "license": "MIT",
   "repository": "https://github.com/tclem/atom-solaried-dark-ui",
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">=0.50.0"
   }
 }
