--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tclem/atom-solarized-dark-ui",
+  "name": "atom-solarized-dark-ui",
   "theme": "ui",
   "version": "0.24.0",
   "description": "Solarized dark theme for interface components",
